<resources>
    <string name="app_name">CharitAble</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="please_wait">please_wait</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="default_web_client_id_auth">441966122514-i08lfca0pcjn71d06tu98ph5tmp9nisl.apps.googleusercontent.com</string>
    <string name="title_activity_nav_drawer">nav_drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">LogOut</string>
    <string name="android_studio">Android Studio</string>
    <string name="username">Username</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="confirm">Confirm</string>
    <string name="individual">Individual</string>
    <string name="restaurant">Restaurant</string>
    <string name="title_activity_donor1">donor1</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_restaurant">restaurant</string>
    <string name="title_activity_ngo">ngo</string>
    <string name="name">Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="submit">Submit</string>
    <string name="title_activity_donor_two">donor_two</string>
    <string name="title_activity_restaurant_two">restaurant_two</string>
    <string name="title_activity_ngo_two">ngo_two</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update">Update</string>
    <string name="update_profile">Update Profile</string>
    <string name="_91">+91 -</string>
    <string name="_000_0000_000">000 0000 000</string>
    <string name="user_email_gmail_com">user_email@gmail.com</string>
    <string name="your_status">Your Status</string>
    <string name="personal_info">Personal Info</string>
    <string name="user_name">User name</string>
    <string name="logout">LogOut</string>
</resources>