<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.profile.profileFragment">
   <com.google.android.material.appbar.AppBarLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"/>
   <androidx.appcompat.widget.Toolbar
       android:id="@+id/toolbar_profile"
       android:layout_width="match_parent"
       android:layout_height="?attr/actionBarSize"

      android:background="@color/lightPurple"/>
   <ImageView
       android:layout_marginTop="30dp"
       android:layout_marginStart="130dp"
       android:src="@drawable/ic_baseline_account_circle_24"
       android:layout_width="150dp"
       android:layout_height="150dp"
        />
   <com.google.android.material.textfield.TextInputEditText
       android:layout_width="270dp"
       android:layout_height="50dp"
       android:ems="10"
       android:hint="@string/username"
       android:textColorHint="@color/black"
       android:layout_marginTop="20dp"
       android:layout_marginStart="60dp"
       android:inputType="text"
       android:textColor="@color/black"
       android:textSize="13sp"
       android:textStyle="normal"
       app:passwordToggleEnabled="true"
       tools:ignore="TouchTargetSizeCheck" />
   <com.google.android.material.textfield.TextInputEditText
       android:layout_width="270dp"
       android:layout_height="50dp"
       android:ems="10"
       android:hint="@string/mobile_number"
       android:textColorHint="@color/black"
       android:layout_marginTop="20dp"
       android:layout_marginStart="60dp"
       android:inputType="text"
       android:textColor="@color/black"
       android:textSize="13sp"
       android:textStyle="normal"
       app:passwordToggleEnabled="true"
       tools:ignore="TouchTargetSizeCheck" />
   <com.google.android.material.textfield.TextInputEditText
       android:layout_width="270dp"
       android:layout_height="50dp"
       android:ems="10"
       android:hint="@string/address"
       android:textColorHint="@color/black"
       android:layout_marginTop="20dp"
       android:layout_marginStart="60dp"
       android:inputType="text"
       android:textColor="@color/black"
       android:textSize="13sp"
       android:textStyle="normal"
       app:passwordToggleEnabled="true"
       tools:ignore="TouchTargetSizeCheck" />
   <com.google.android.material.textfield.TextInputEditText
       android:layout_width="270dp"
       android:layout_height="50dp"
       android:ems="10"
       android:hint="@string/city"
       android:textColorHint="@color/black"
       android:layout_marginTop="20dp"
       android:layout_marginStart="60dp"
       android:inputType="text"
       android:textColor="@color/black"
       android:textSize="13sp"
       android:textStyle="normal"
       app:passwordToggleEnabled="true"
       tools:ignore="TouchTargetSizeCheck" />
   <Button
       android:id="@+id/confirm_button"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:layout_marginTop="60dp"
       android:layout_marginStart="100dp"
       android:layout_marginEnd="100dp"
       android:elevation="15dp"
       android:gravity="center"
       android:text="@string/confirm"
       android:textAllCaps="false"
       android:textColor="@color/textColor"
       android:textSize="20sp"
       app:backgroundTint="@color/figmablue"/>

</LinearLayout>