<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/white"
    tools:context=".login">


    <androidx.cardview.widget.CardView
        android:layout_width="339dp"
        android:layout_height="470dp"
        android:layout_gravity="center"
        android:layout_marginStart="38dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="38dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="303dp"
            android:layout_height="427dp"
            android:background="#71490D"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/switch_tumbs"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2" />

            <LinearLayout
                android:id="@+id/ngoinfolayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#C8892A"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="25dp">


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="243dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:hint="@string/name"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp"
                    app:shapeAppearanceOverlay="@style/Button4">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/namengo"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@color/white"
                        android:ems="10"
                        android:inputType="textPersonName|textEmailAddress"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        android:textStyle="normal" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="243dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:hint="@string/contact_number"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp"
                    app:shapeAppearanceOverlay="@style/Button4">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mobilengo"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@color/white"
                        android:ems="10"
                        android:inputType="textPersonName|textEmailAddress"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        android:textStyle="normal" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="243dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:hint="@string/address"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp"
                    app:shapeAppearanceOverlay="@style/Button4">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addressngo"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@color/white"
                        android:ems="10"
                        android:inputType="textPersonName|textEmailAddress"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        android:textStyle="normal" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="243dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:hint="@string/city"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp"
                    app:shapeAppearanceOverlay="@style/Button4">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/cityngo"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@color/white"
                        android:ems="10"
                        android:inputType="textPersonName|textEmailAddress"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        android:textStyle="normal" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <Button
                android:id="@+id/btnsubmitngo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                android:elevation="15dp"
                android:gravity="center"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/textColor"
                android:textSize="17sp"
                app:backgroundTint="#5D91ED" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>